# agh-psi

./: .gitignore  pyproject.toml
lab1/: lab_1.ipynb
lab2/: lab_2.ipynb
lab3/: lab_3.ipynb
lab4/: lab_4.ipynb
