[project]
name = "basics-of-ai-agh"
version = "1.0.0"
description = "Basics of Artificial Intelligence course at AGH"
authors = []
readme = "README.md"
requires-python = ">=3.12,<=3.13"

dependencies = [
    "imbalanced-learn>=0.14.0",
    "jupyter",
    "jupyterlab-execute-time",
    "jupytext",
    "lightgbm==4.*",
    "matplotlib",
    "numpy",
    "opencv-python>=4.11.0.86",
    "pandas",
    "pandas-stubs==2.3.2.250926",
    "poetry==2.2.1",
    "sacremoses>=0.1.1",
    "scikit-learn>=1.7.2",
    "scikit-surprise>=1.1.4",
    "scipy-stubs==1.16.3.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.57.3",
]

[tool.uv]
package = false
